--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Very simple package for creating a keymirror object from an array of strings",
   "main": "dist/array-to-keymirror.js",
-  "unpkg": "dist/array-to-keymirror.browser.js",
-  "main": "dist/array-to-keymirror.common.js",
+  "unpkg": "dist/mirrarray.js",
+  "main": "dist/mirrarray.js",
   "module": "index.js",
-  "repository": "git@github.com:johnwquarles/array-to-keymirror.git",
+  "repository": "git@github.com:johnwquarles/mirrarray.git",
   "author": "John Wiley Quarles <john.w.quarles@gmail.com>",
   "license": "MIT",
   "scripts": {
