--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "module": "index.js",
   "repository": "git@github.com:johnwquarles/mirrarray.git",
   "author": "John Wiley Quarles <john.w.quarles@gmail.com>",
-  "keywords": ["keymirror", "key-mirror"],
+  "keywords": [
+    "keymirror",
+    "key-mirror"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/johnwquarles/mirrarray/issues"
@@ -25,6 +28,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
+    "coveralls": "^2.13.1",
     "jest": "^21.0.2",
     "webpack": "^3.5.5",
     "webpack-merge": "^4.1.0"
