--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirrarray",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Very simple package for creating a keymirror object from an array of strings",
   "main": "dist/mirrarray.js",
   "unpkg": "dist/mirrarray.js",
@@ -17,20 +17,27 @@
   },
   "homepage": "https://github.com/johnwquarles/mirrarray#readme",
   "scripts": {
-    "build": "webpack --config webpack.config.babel.js --progress --hide-modules",
+    "build": "webpack --config webpack.config.babel.js --progress",
     "coverage": "jest --coverage",
     "prepublish": "npm run build",
     "test": "jest"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-register": "^6.26.0",
-    "coveralls": "^2.13.1",
-    "jest": "^21.0.2",
-    "webpack": "^3.5.5",
-    "webpack-merge": "^4.1.0"
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/register": "^7.13.16",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "coveralls": "^3.1.0",
+    "jest": "^26.6.3",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0",
+    "webpack-merge": "^5.7.3"
   }
 }
